chore(judge): drop user patch REST endpoint
